[Chore] 이미지 경로 수정

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
 <div id="loading_indicator" class="container">
   <h2>포트폴리오 준비중...</h2>
   <br>
-  <img class="indicator" src="./portfolio/assets/assets/images/loading_lottie.gif" />
+  <img class="indicator" src="https://raw.githubusercontent.com/ums1212/ums1212.github.io/refs/heads/main/portfolio/assets/assets/images/loading_lottie.gif" />
 </div>
 
   <script src="flutter_bootstrap.js" async></script>
