--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -65,5 +65,9 @@
     }, 3000);
   };
 </script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
+<script type="text/javascript">
+  pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js";
+</script>
 </body>
 </html>
